env/templates/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-x-postgresql-lb
spec:
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: postgresql
  selector:
    app: postgresql
    release: jenkins-x
    role: master
  type: LoadBalancer
