env/templates/700-deck-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    provider: fabric8
  name: deck
spec:
  rules:
  - host: deck.staging.jrawlings.co.uk
    http:
      paths:
      - backend:
          serviceName: deck
          servicePort: 80
  tls:
  - hosts:
    - deck.staging.jrawlings.co.uk
    secretName: tls-infra-jrawlings-co-uk
