env/templates/700-dns-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    provider: fabric8
  name: staging
spec:
  rules:
  - host: staging.jrawlings.co.uk
    http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 80
  tls:
  - hosts:
    - staging.jrawlings.co.uk
    secretName: tls-staging-jrawlings-co-uk
