env/templates/701-dashboard-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    provider: fabric8
  name: dashboard
spec:
  rules:
  - host: dashboard.staging.jrawlings.co.uk
    http:
      paths:
      - backend:
          serviceName: sso-jenkins-x-ui
          servicePort: 80
  tls:
  - hosts:
    - dashboard.staging.jrawlings.co.uk
    secretName: tls-infra-jrawlings-co-uk
